Adding compass bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 before_script:
   - npm install -g bower grunt-cli
   - bower install
+  - gem install compass
   - grunt build
 deploy:
   provider: s3
